--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,11 @@
 SECRET_KEY=
 DEBUG=True
 
-DATABASE_NAME=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_HOST=
-DATABASE_PORT=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_PORT=
 
 LOCATION=
 
