--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ celery = ">=5.5.3,<6.0.0"
 django-celery-beat = ">=2.8.1,<3.0.0"
 django-cors-headers = ">=4.7.0,<5.0.0"
 flake8 = ">=7.2.0,<8.0.0"
+gunicorn = "^23.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
